syntax = "proto3";

package user.v1;

message OrgMember {
  string user_id = 1;
  string org_id = 2;
}

message UpsertOrgMemberRequest {
  string user_id = 1;
  string org_id = 2;
}

message UpsertOrgMemberResponse {
  OrgMember org_member = 1;
}
